update docker instruction plus test